--- a/styles/sass/blog.scss
+++ b/styles/sass/blog.scss
@@ -47,6 +47,7 @@ img {
 
 .blogImageContainer {
     position: relative;
+    right: -10px;
     top: -5rem;
 }
 
@@ -55,7 +56,6 @@ img {
 }
 
 .blogCommentSection{
-    width: 90%;
     padding: 5% 10%;
     margin: auto;
     background-color: rgba(0,0,0,0.2);
