--- a/styles/sass/contact.scss
+++ b/styles/sass/contact.scss
@@ -29,6 +29,7 @@ h1 {
     box-shadow: 25px 25px $highlightColor;
     position: relative;
     top: -200px;
+    left: -12.5px;
     padding: 50px;
 }
 
