--- a/styles/sass/partials/_articleSection.scss
+++ b/styles/sass/partials/_articleSection.scss
@@ -34,6 +34,8 @@
     justify-content: center;
 
     img {
+        position: relative;
+        left: -10px;
         width: 80%;
         box-shadow: 20px 20px $highlightColor;
     }
@@ -50,6 +52,8 @@
     }
 
     .articleImage img {
+        position: static;
+        left: 0;
         width: 100%;
         max-width: 700px;
         position: relative;
@@ -58,6 +62,9 @@
 
     .articleContainerOne {
         flex-direction: row;
+        .articleContent {
+            align-items: flex-start;
+        }
 
         .articleImage {
             display: block;
