--- a/styles/sass/partials/_natureSection.scss
+++ b/styles/sass/partials/_natureSection.scss
@@ -9,17 +9,21 @@
     gap: 30px;
     .natureImage {
         width: 100%;
-        max-width: 50vw;
         margin-bottom: 50px;
         img {
-            width: 100%;            
+            position: relative;
+            right: -7.5px;
+            width: 100%;
+            max-height: 300px;            
             box-shadow: -15px 15px  $highlightColor;
+            object-fit: cover;
         }        
     }
 
     .natureContent {
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 1rem;
         width: 100%;
         h2{
@@ -35,19 +39,28 @@
     }
 }
 
+@media (min-width: 600px) and (max-width: 999px) {
+    .nature .wrapper .natureImage {
+        max-width: 60vw;
+    }
+}
+
 @media (min-width: 1000px) {
     .nature .wrapper {
         padding: 150px 150px 100px;
         flex-direction: row;
         align-items: flex-start;
         gap: 50px;
-    }
-    .natureImage {
-        width: 33%;
-        margin-bottom: 0;
-        img {
-            width: 40%;
-            max-width:400px;
+        .natureImage {
+            width: 50%;
+            margin-bottom: 0;
+            img {
+                max-width:400px;
+                max-height: 100%;
+            }
         }
-    }
+        .natureContent{
+            align-items: flex-start;
+        }
+    }    
 }
